erDiagram
    TENANTS ||--o{ CHART_OF_ACCOUNTS : has
    TENANTS ||--o{ FISCAL_YEARS : has
    TENANTS ||--o{ COST_CENTERS : has
    TENANTS ||--o{ TAX_GROUPS : has
    TENANTS ||--o{ BUDGETS : has
    TENANTS ||--o{ BANK_ACCOUNTS : has

    CHART_OF_ACCOUNTS ||--o{ CHART_OF_ACCOUNTS : parent_child
    CHART_OF_ACCOUNTS ||--o{ JOURNAL_ENTRY_LINES : used_in
    CHART_OF_ACCOUNTS ||--o{ TAX_RATES : tax_account
    CHART_OF_ACCOUNTS ||--o{ BUDGET_LINES : budgeted_for

    FISCAL_YEARS ||--o{ FISCAL_PERIODS : divided_into
    FISCAL_PERIODS ||--o{ JOURNAL_ENTRIES : posted_to

    JOURNAL_ENTRIES ||--o{ JOURNAL_ENTRY_LINES : has_lines
    JOURNAL_ENTRIES ||--o{ JOURNAL_ENTRIES : reversal_of

    COST_CENTERS ||--o{ COST_CENTERS : parent_child
    COST_CENTERS ||--o{ JOURNAL_ENTRY_LINES : allocated_to

    TAX_GROUPS ||--o{ TAX_RATES : contains
    TAX_GROUPS ||--o{ TAX_RULES : governs
    TAX_RATES ||--o{ JOURNAL_ENTRY_LINES : applied_to

    BUDGETS ||--o{ BUDGET_LINES : has_lines
    BUDGETS ||--o{ FISCAL_YEARS : for_year

    BANK_ACCOUNTS ||--o{ BANK_TRANSACTIONS : has
    BANK_ACCOUNTS ||--o{ BANK_RECONCILIATIONS : reconciled
    BANK_TRANSACTIONS ||--o{ JOURNAL_ENTRIES : matched_to

    PAYMENT_TERMS ||--o{ DOCUMENTS : applied_to